update fix on Iphone

--- a/Oppo/css/main.scss
+++ b/Oppo/css/main.scss
@@ -542,8 +542,9 @@
 
     .phone-back__title-wrapper {
       .phone-back__title {
-        display: inline-flex;
-        flex-direction: column;
+        span:first-child {
+          display: block;
+        }
       }
     }
 
