--- a/Oppo/css/reponsive.scss
+++ b/Oppo/css/reponsive.scss
@@ -1053,6 +1053,10 @@ and open the template in the editor.
       flex-direction: column;
 
       .screen__text__headline {
+        .screen-title {
+          display: flex;
+        }
+        
         .screen-subtitle {
           margin: 30px 0;
         }
